Add jspath library dependence

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "marked": "~0.2.5",
     "highlight.js": "7",
     "sha1": "1.0.0",
-    "q-io": "~1.10.6"
+    "q-io": "~1.10.6",
+    "jspath": "~0.2.10"
   }
 }
