Add new module for db normalization. Implement normalization for languages, tags, types, authors and translators

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,6 @@
 {
     "contentDirectory": "content",
     "outputTargetFile": "__data.json",
-
     "gitAPI": {
         "common": {
             "version": "3.0.0",
@@ -17,7 +16,6 @@
             "url": "/api/v3"
         }
     },
-
     "sources": {
         "private": [
             {
@@ -26,7 +24,9 @@
                     {
                         "name": "islands-components",
                         "targetDir": "islands-components",
-                        "type": ["libs"],
+                        "type": [
+                            "libs"
+                        ],
                         "tags": {
                             "include": [],
                             "exclude": []
@@ -39,7 +39,9 @@
                     {
                         "name": "islands-page",
                         "targetDir": "islands-page",
-                        "type": ["libs"],
+                        "type": [
+                            "libs"
+                        ],
                         "tags": {
                             "include": [],
                             "exclude": []
@@ -52,7 +54,9 @@
                     {
                         "name": "islands-user",
                         "targetDir": "islands-user",
-                        "type": ["libs"],
+                        "type": [
+                            "libs"
+                        ],
                         "tags": {
                             "include": [],
                             "exclude": []
@@ -65,7 +69,9 @@
                     {
                         "name": "islands-search",
                         "targetDir": "islands-search",
-                        "type": ["libs"],
+                        "type": [
+                            "libs"
+                        ],
                         "tags": {
                             "include": [],
                             "exclude": []
@@ -85,21 +91,31 @@
                     {
                         "name": "bem-core",
                         "targetDir": "bem-core",
-                        "type": ["libs", "docs"],
-                        "docDirs": ["common.docs"],
+                        "type": [
+                            "docs"
+                        ],
+                        "docDirs": [
+                            "common.docs"
+                        ],
                         "tags": {
                             "include": [],
                             "exclude": []
                         },
                         "branches": {
-                            "include": [],
-                            "exclude": []
+                            "include": [
+                                "v1"
+                            ],
+                            "exclude": [
+                                "v1"
+                            ]
                         }
                     },
                     {
                         "name": "bem-components",
                         "targetDir": "bem-components",
-                        "type": ["libs"],
+                        "type": [
+                            "libs"
+                        ],
                         "tags": {
                             "include": [],
                             "exclude": []
@@ -113,46 +129,95 @@
                         "name": "bem-method",
                         "targetDir": "bem-method",
                         "docDirs": [],
-                        "type": ["docs"],
+                        "type": [
+                            "docs"
+                        ],
                         "branches": {
-                            "include": ["master"]
-                        }
+                            "include": [
+                                "master"
+                            ],
+                            "exclude": [
+                                "master"
+                            ]
+                        },
+                        "tags": []
                     },
                     {
                         "name": "borschik",
                         "targetDir": "borschik",
-                        "docDirs": ["docs"],
-                        "type": ["docs"],
+                        "docDirs": [
+                            "docs"
+                        ],
+                        "type": [
+                            "docs"
+                        ],
                         "branches": {
-                            "include": ["master"]
-                        }
+                            "include": [
+                                "master"
+                            ],
+                            "exclude": [
+                                "master"
+                            ]
+                        },
+                        "tags": []
                     },
                     {
                         "name": "borschik-server",
                         "targetDir": "borschik-server",
-                        "docDirs": ["docs"],
-                        "type": ["docs"],
+                        "docDirs": [
+                            "docs"
+                        ],
+                        "type": [
+                            "docs"
+                        ],
                         "branches": {
-                            "include": ["master"]
-                        }
+                            "include": [
+                                "master"
+                            ],
+                            "exclude": [
+                                "master"
+                            ]
+                        },
+                        "tags": []
                     },
                     {
                         "name": "bem-articles",
                         "targetDir": "articles/bem-articles",
                         "docDirs": [],
-                        "type": ["docs"],
+                        "type": [
+                            "docs"
+                        ],
                         "branches": {
-                            "include": ["master"]
-                        }
+                            "include": [
+                                "master"
+                            ],
+                            "exclude": [
+                                "master"
+                            ]
+                        },
+                        "tags": []
                     },
                     {
                         "name": "bem-www",
                         "targetDir": "bem-www",
-                        "docDirs": ["content/blog", "content/tools", "content/authors", "content/pages"],
-                        "type": ["docs"],
+                        "docDirs": [
+                            "content/blog",
+                            "content/tools",
+                            "content/authors",
+                            "content/pages"
+                        ],
+                        "type": [
+                            "docs"
+                        ],
                         "branches": {
-                            "include": ["master"]
-                        }
+                            "include": [
+                                "master"
+                            ],
+                            "exclude": [
+                                "master"
+                            ]
+                        },
+                        "tags": []
                     }
                 ]
             },
@@ -162,11 +227,21 @@
                     {
                         "name": "csso",
                         "targetDir": "csso",
-                        "docDirs": ["docs"],
-                        "type": ["docs"],
+                        "docDirs": [
+                            "docs"
+                        ],
+                        "type": [
+                            "docs"
+                        ],
                         "branches": {
-                            "include": ["master"]
-                        }
+                            "include": [
+                                "master"
+                            ],
+                            "exclude": [
+                                "master"
+                            ]
+                        },
+                        "tags": []
                     }
                 ]
             },
@@ -176,11 +251,21 @@
                     {
                         "name": "firmCardStory",
                         "targetDir": "articles/firm-card-story",
-                        "docDirs": ["docs"],
-                        "type": ["docs"],
+                        "docDirs": [
+                            "docs"
+                        ],
+                        "type": [
+                            "docs"
+                        ],
                         "branches": {
-                            "include": ["master"]
-                        }
+                            "include": [
+                                "master"
+                            ],
+                            "exclude": [
+                                "master"
+                            ]
+                        },
+                        "tags": []
                     }
                 ]
             },
@@ -191,10 +276,18 @@
                         "name": "bem-news",
                         "targetDir": "blog/bem-news",
                         "docDirs": [],
-                        "type": ["docs"],
+                        "type": [
+                            "docs"
+                        ],
                         "branches": {
-                            "include": ["master"]
-                        }
+                            "include": [
+                                "master"
+                            ],
+                            "exclude": [
+                                "master"
+                            ]
+                        },
+                        "tags": []
                     }
                 ]
             },
@@ -204,11 +297,21 @@
                     {
                         "name": "xjst",
                         "targetDir": "xjst",
-                        "docDirs": ["doc"],
-                        "type": ["docs"],
+                        "docDirs": [
+                            "doc"
+                        ],
+                        "type": [
+                            "docs"
+                        ],
                         "branches": {
-                            "include": ["master"]
-                        }
+                            "include": [
+                                "master"
+                            ],
+                            "exclude": [
+                                "master"
+                            ]
+                        },
+                        "tags": []
                     }
                 ]
             },
@@ -218,11 +321,21 @@
                     {
                         "name": "svgo",
                         "targetDir": "svgo",
-                        "docDirs": ["docs"],
-                        "type": ["docs"],
+                        "docDirs": [
+                            "docs"
+                        ],
+                        "type": [
+                            "docs"
+                        ],
                         "branches": {
-                            "include": ["master"]
-                        }
+                            "include": [
+                                "master"
+                            ],
+                            "exclude": [
+                                "master"
+                            ]
+                        },
+                        "tags": []
                     }
                 ]
             },
@@ -232,29 +345,59 @@
                     {
                         "name": "setochka",
                         "targetDir": "setochka",
-                        "docDirs": ["doc"],
-                        "type": ["docs"],
+                        "docDirs": [
+                            "doc"
+                        ],
+                        "type": [
+                            "docs"
+                        ],
                         "branches": {
-                            "include": ["bem-info-data"]
-                        }
+                            "include": [
+                                "bem-info-data"
+                            ],
+                            "exclude": [
+                                "bem-info-data"
+                            ]
+                        },
+                        "tags": []
                     },
                     {
                         "name": "ometa-js",
                         "targetDir": "ometa-js",
-                        "docDirs": ["doc"],
-                        "type": ["docs"],
+                        "docDirs": [
+                            "doc"
+                        ],
+                        "type": [
+                            "docs"
+                        ],
                         "branches": {
-                            "include": ["bem-info-data"]
-                        }
+                            "include": [
+                                "bem-info-data"
+                            ],
+                            "exclude": [
+                                "bem-info-data"
+                            ]
+                        },
+                        "tags": []
                     },
                     {
                         "name": "gonzales",
                         "targetDir": "gonzales",
-                        "docDirs": ["doc"],
-                        "type": ["docs"],
+                        "docDirs": [
+                            "doc"
+                        ],
+                        "type": [
+                            "docs"
+                        ],
                         "branches": {
-                            "include": ["bem-info-data"]
-                        }
+                            "include": [
+                                "bem-info-data"
+                            ],
+                            "exclude": [
+                                "bem-info-data"
+                            ]
+                        },
+                        "tags": []
                     }
                 ]
             }
