Improve post-procesing functionality for make docs task. Implement extrude categories functionality without tree construction

--- a/config/config.json
+++ b/config/config.json
@@ -92,7 +92,6 @@
                         "name": "bem-core",
                         "targetDir": "bem-core",
                         "type": [
-                            "libs",
                             "docs"
                         ],
                         "docDirs": [
@@ -103,8 +102,12 @@
                             "exclude": []
                         },
                         "branches": {
-                            "include": [],
-                            "exclude": []
+                            "include": [
+                                "v1"
+                            ],
+                            "exclude": [
+                                "v1"
+                            ]
                         }
                     },
                     {
