--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,7 @@
 {
     "contentDirectory": "content",
     "outputTargetFile": "__data.json",
+
     "gitAPI": {
         "common": {
             "version": "3.0.0",
@@ -16,6 +17,7 @@
             "url": "/api/v3"
         }
     },
+
     "sources": {
         "private": [
             {
@@ -24,9 +26,7 @@
                     {
                         "name": "islands-components",
                         "targetDir": "islands-components",
-                        "type": [
-                            "libs"
-                        ],
+                        "type": ["libs"],
                         "tags": {
                             "include": [],
                             "exclude": []
@@ -39,9 +39,7 @@
                     {
                         "name": "islands-page",
                         "targetDir": "islands-page",
-                        "type": [
-                            "libs"
-                        ],
+                        "type": ["libs"],
                         "tags": {
                             "include": [],
                             "exclude": []
@@ -54,9 +52,7 @@
                     {
                         "name": "islands-user",
                         "targetDir": "islands-user",
-                        "type": [
-                            "libs"
-                        ],
+                        "type": ["libs"],
                         "tags": {
                             "include": [],
                             "exclude": []
@@ -69,9 +65,7 @@
                     {
                         "name": "islands-search",
                         "targetDir": "islands-search",
-                        "type": [
-                            "libs"
-                        ],
+                        "type": ["libs"],
                         "tags": {
                             "include": [],
                             "exclude": []
@@ -91,31 +85,21 @@
                     {
                         "name": "bem-core",
                         "targetDir": "bem-core",
-                        "type": [
-                            "docs"
-                        ],
-                        "docDirs": [
-                            "common.docs"
-                        ],
+                        "type": ["docs"],
+                        "docDirs": ["common.docs"],
                         "tags": {
                             "include": [],
                             "exclude": []
                         },
                         "branches": {
-                            "include": [
-                                "v1"
-                            ],
-                            "exclude": [
-                                "v1"
-                            ]
+                            "include": ["v1"],
+                            "exclude": []
                         }
                     },
                     {
                         "name": "bem-components",
                         "targetDir": "bem-components",
-                        "type": [
-                            "libs"
-                        ],
+                        "type": ["libs"],
                         "tags": {
                             "include": [],
                             "exclude": []
@@ -129,119 +113,60 @@
                         "name": "bem-method",
                         "targetDir": "bem-method",
                         "docDirs": [],
-                        "type": [
-                            "docs"
-                        ],
+                        "type": ["docs"],
                         "branches": {
-                            "include": [
-                                "master"
-                            ],
-                            "exclude": [
-                                "master"
-                            ]
-                        },
-                        "tags": []
+                            "include": ["master"]
+                        }
                     },
                     {
                         "name": "borschik",
                         "targetDir": "borschik",
-                        "docDirs": [
-                            "docs"
-                        ],
-                        "type": [
-                            "docs"
-                        ],
+                        "docDirs": ["docs"],
+                        "type": ["docs"],
                         "branches": {
-                            "include": [
-                                "master"
-                            ],
-                            "exclude": [
-                                "master"
-                            ]
-                        },
-                        "tags": []
+                            "include": ["master"]
+                        }
                     },
                     {
                         "name": "borschik-server",
                         "targetDir": "borschik-server",
-                        "docDirs": [
-                            "docs"
-                        ],
-                        "type": [
-                            "docs"
-                        ],
+                        "docDirs": ["docs"],
+                        "type": ["docs"],
                         "branches": {
-                            "include": [
-                                "master"
-                            ],
-                            "exclude": [
-                                "master"
-                            ]
-                        },
-                        "tags": []
+                            "include": ["master"]
+                        }
                     },
                     {
                         "name": "bem-articles",
                         "targetDir": "articles/bem-articles",
                         "docDirs": [],
-                        "type": [
-                            "docs"
-                        ],
+                        "type": ["docs"],
                         "branches": {
-                            "include": [
-                                "master"
-                            ],
-                            "exclude": [
-                                "master"
-                            ]
-                        },
-                        "tags": []
+                            "include": ["master"]
+                        }
                     },
                     {
                         "name": "bem-www",
                         "targetDir": "bem-www",
-                        "docDirs": [
-                            "content/blog",
-                            "content/tools",
-                            "content/authors",
-                            "content/pages"
-                        ],
-                        "type": [
-                            "docs"
-                        ],
+                        "docDirs": ["content/blog", "content/tools", "content/authors", "content/pages"],
+                        "type": ["docs"],
                         "branches": {
-                            "include": [
-                                "master"
-                            ],
-                            "exclude": [
-                                "master"
-                            ]
-                        },
-                        "tags": []
+                            "include": ["master"]
+                        }
                     }
                 ]
             },
             {
-                "org": "css",
+                "org": "tormozz48",
                 "repositories": [
                     {
                         "name": "csso",
                         "targetDir": "csso",
-                        "docDirs": [
-                            "docs"
-                        ],
-                        "type": [
-                            "docs"
-                        ],
+                        "docDirs": ["docs"],
+                        "type": ["docs"],
                         "branches": {
-                            "include": [
-                                "master"
-                            ],
-                            "exclude": [
-                                "master"
-                            ]
-                        },
-                        "tags": []
+                            "include": ["master"]
+                        }
                     }
                 ]
             },
@@ -251,21 +176,11 @@
                     {
                         "name": "firmCardStory",
                         "targetDir": "articles/firm-card-story",
-                        "docDirs": [
-                            "docs"
-                        ],
-                        "type": [
-                            "docs"
-                        ],
+                        "docDirs": ["docs"],
+                        "type": ["docs"],
                         "branches": {
-                            "include": [
-                                "master"
-                            ],
-                            "exclude": [
-                                "master"
-                            ]
-                        },
-                        "tags": []
+                            "include": ["master"]
+                        }
                     }
                 ]
             },
@@ -276,18 +191,10 @@
                         "name": "bem-news",
                         "targetDir": "blog/bem-news",
                         "docDirs": [],
-                        "type": [
-                            "docs"
-                        ],
+                        "type": ["docs"],
                         "branches": {
-                            "include": [
-                                "master"
-                            ],
-                            "exclude": [
-                                "master"
-                            ]
-                        },
-                        "tags": []
+                            "include": ["master"]
+                        }
                     }
                 ]
             },
@@ -297,21 +204,11 @@
                     {
                         "name": "xjst",
                         "targetDir": "xjst",
-                        "docDirs": [
-                            "doc"
-                        ],
-                        "type": [
-                            "docs"
-                        ],
+                        "docDirs": ["doc"],
+                        "type": ["docs"],
                         "branches": {
-                            "include": [
-                                "master"
-                            ],
-                            "exclude": [
-                                "master"
-                            ]
-                        },
-                        "tags": []
+                            "include": ["master"]
+                        }
                     }
                 ]
             },
@@ -321,21 +218,11 @@
                     {
                         "name": "svgo",
                         "targetDir": "svgo",
-                        "docDirs": [
-                            "docs"
-                        ],
-                        "type": [
-                            "docs"
-                        ],
+                        "docDirs": ["docs"],
+                        "type": ["docs"],
                         "branches": {
-                            "include": [
-                                "master"
-                            ],
-                            "exclude": [
-                                "master"
-                            ]
-                        },
-                        "tags": []
+                            "include": ["master"]
+                        }
                     }
                 ]
             },
@@ -345,59 +232,29 @@
                     {
                         "name": "setochka",
                         "targetDir": "setochka",
-                        "docDirs": [
-                            "doc"
-                        ],
-                        "type": [
-                            "docs"
-                        ],
+                        "docDirs": ["doc"],
+                        "type": ["docs"],
                         "branches": {
-                            "include": [
-                                "bem-info-data"
-                            ],
-                            "exclude": [
-                                "bem-info-data"
-                            ]
-                        },
-                        "tags": []
+                            "include": ["bem-info-data"]
+                        }
                     },
                     {
                         "name": "ometa-js",
                         "targetDir": "ometa-js",
-                        "docDirs": [
-                            "doc"
-                        ],
-                        "type": [
-                            "docs"
-                        ],
+                        "docDirs": ["doc"],
+                        "type": ["docs"],
                         "branches": {
-                            "include": [
-                                "bem-info-data"
-                            ],
-                            "exclude": [
-                                "bem-info-data"
-                            ]
-                        },
-                        "tags": []
+                            "include": ["bem-info-data"]
+                        }
                     },
                     {
                         "name": "gonzales",
                         "targetDir": "gonzales",
-                        "docDirs": [
-                            "doc"
-                        ],
-                        "type": [
-                            "docs"
-                        ],
+                        "docDirs": ["doc"],
+                        "type": ["docs"],
                         "branches": {
-                            "include": [
-                                "bem-info-data"
-                            ],
-                            "exclude": [
-                                "bem-info-data"
-                            ]
-                        },
-                        "tags": []
+                            "include": ["bem-info-data"]
+                        }
                     }
                 ]
             }
